# promptweaver

./: .gitignore  README.md  pyproject.toml  quickstart.ipynb  requirements.txt
.github/workflows/: pypi-publish.yml
promptweaver/: .gitignore  README.md
promptweaver/clients/gemini/: gemini_client.py  multimodal_content_builder.py
promptweaver/core/: base_llm_client.py  content_builder.py  prompt_template.py
promptweaver/utils/: __init__.py  mime_utils.py  string_utils.py
samples/: 01-hello-world-text.yml.j2  02-hello-world-multimodal.yml.j2  03-contact-center-transcriptions-classifier.yml.j2  04-recipe-generator-text.yml.j2  05-recipe-generator-image.yml.j2  06-audio-summarization.yml.j2  07-document-summarization.yml.j2  08-video-comprehension.yml.j2  09-multimodal-multiple-images.yml.j2
tests/prompts/: 01-hello-world-text.yml.j2  04-recipe-generator-text.yml.j2  cooking-designer-image.yml.j2  cooking-designer-text.yml.j2  example.yml.j2
