[project]
name = "promptweaver"
dynamic = ["version"]
description = "PromptWeaver streamlines prompt development and management in Generative AI workflows"
authors = [
    {name = "Gen AI Solution Accelerators", email = "gen-ai-solution-accelerators@google.com"},
]
dependencies = [
    "jinja2>=3.1.4",
    "pyyaml>=6.0.1",
    "google-cloud-aiplatform",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "Apache-2.0"}

[tool.pdm.dev-dependencies]
dev = [
    "ipykernel>=6.29.5",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.version]
source = "scm"
tag_filter = "python/*"
tag_regex = '^python/(?:\D*)?(?P<version>([1-9][0-9]*!)?(0|[1-9][0-9]*)(\.(0|[1-9][0-9]*))*((a|b|c|rc)(0|[1-9][0-9]*))?(\.post(0|[1-9][0-9]*))?(\.dev(0|[1-9][0-9]*))?$)$'
